--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -5,8 +5,8 @@
   --color-primary: #8257E5;
   --color-primary-dark: #774DD6;
   --color-primary-darker: #6842C2;
-  --color-secundary: #04D361;
-  --color-secundary-dark: #04BF58;
+  --color-secondary: #04D361;
+  --color-secondary-dark: #04BF58;
   --color-title-in-primary: #FFFFFF;
   --color-text-in-primary: #D4C2FF;
   --color-text-title: #32264D;
@@ -17,6 +17,8 @@
   --color-button-text: #FFFFFF;
   --color-box-base: #FFFFFF;
   --color-box-footer: #FAFAFC;
+
+  --media-large: 1100px;
 
   font-size: 60%;
 }
